[package]
name = "acting"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
async-channel = "2.3.1"
async-trait = "0.1.82"
bincode = "1.3.3"
clap = { version = "4.5.17", features = ["derive"] }
ctor = "0.2.8"
inventory = "0.3.15"
lazy_static = "1.5.0"
once_cell = "1.19.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
